--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -10,61 +10,158 @@ env:
   REGISTRY: localhost
   IMAGE_NAME: pricesyncpro-frontend
   CONTAINER_NAME: pricesyncpro-frontend
+  NODE_VERSION: '18'
+  PORT: 3000
 
 jobs:
   test:
+    name: Test & Build
     runs-on: self-hosted
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Node.js
+    - name: Setup Node.js ${{ env.NODE_VERSION }}
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
         
     - name: Install dependencies
-      run: npm ci
-      
+      run: |
+        npm ci --prefer-offline --no-audit
+        
     - name: Run linting
       run: npm run lint
       
+    - name: Run tests
+      run: |
+        if npm run test --if-present; then
+          echo "Tests passed successfully"
+        else
+          echo "No tests found or tests failed"
+          exit 0
+        fi
+      
     - name: Build application
       run: npm run build
+      
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-files
+        path: |
+          .next/
+          package*.json
+        retention-days: 1
 
   deploy:
+    name: Deploy to Production
     needs: test
     runs-on: self-hosted
     if: github.ref == 'refs/heads/main'
     
+    environment:
+      name: production
+      url: http://localhost:${{ env.PORT }}
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
+    - name: Set image tag
+      run: |
+        echo "IMAGE_TAG=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest" >> $GITHUB_ENV
+        echo "IMAGE_TAG_SHA=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}" >> $GITHUB_ENV
+        
     - name: Build container image
       run: |
-        podman build --cgroup-manager=cgroupfs -t ${{ env.IMAGE_NAME }}:latest .
+        echo "Building image: ${{ env.IMAGE_TAG }}"
+        podman build \
+          --cgroup-manager=cgroupfs \
+          --tag ${{ env.IMAGE_TAG }} \
+          --tag ${{ env.IMAGE_TAG_SHA }} \
+          --label "org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}" \
+          --label "org.opencontainers.image.revision=${{ github.sha }}" \
+          --label "org.opencontainers.image.created=$(date -Iseconds)" \
+          .
+        
+    - name: Verify image
+      run: |
+        podman images | grep ${{ env.IMAGE_NAME }}
         
     - name: Stop existing container
       run: |
-        podman stop ${{ env.CONTAINER_NAME }} || true
-        podman rm ${{ env.CONTAINER_NAME }} || true
+        if podman ps -q --filter "name=${{ env.CONTAINER_NAME }}" | grep -q .; then
+          echo "Stopping existing container..."
+          podman stop ${{ env.CONTAINER_NAME }}
+          podman rm ${{ env.CONTAINER_NAME }}
+        else
+          echo "No existing container found"
+        fi
         
     - name: Run new container
       run: |
+        echo "Starting new container: ${{ env.CONTAINER_NAME }}"
         podman run -d \
           --name ${{ env.CONTAINER_NAME }} \
           --cgroup-manager=cgroupfs \
-          -p 3000:3000 \
-          ${{ env.IMAGE_NAME }}:latest
-    - name: Cleanup build artifacts and old images
+          --publish ${{ env.PORT }}:3000 \
+          --restart unless-stopped \
+          --label "app=${{ env.IMAGE_NAME }}" \
+          --label "version=${{ github.sha }}" \
+          --health-cmd="curl -f http://localhost:3000 || exit 1" \
+          --health-interval=30s \
+          --health-timeout=10s \
+          --health-retries=3 \
+          ${{ env.IMAGE_TAG }}
+          
+    - name: Wait for container health check
       run: |
-        # Build artifacts'ları sil
-        rm -f *.tar *.tar.gz *.zip
-        # Eski image'ları temizle
-        podman image prune -f
-        # Dangling image'ları sil
-        podman rmi $(podman images -f "dangling=true" -q) 2>/dev/null || true
+        echo "Waiting for container to be healthy..."
+        timeout 120 bash -c 'until podman healthcheck run ${{ env.CONTAINER_NAME }}; do sleep 5; done'
+        echo "Container is healthy!"
         
+    - name: Verify deployment
+      run: |
+        sleep 10
+        if curl -f http://localhost:${{ env.PORT }} > /dev/null 2>&1; then
+          echo "✅ Deployment successful - Application is responding"
+          podman ps --filter "name=${{ env.CONTAINER_NAME }}"
+        else
+          echo "❌ Deployment failed - Application is not responding"
+          podman logs ${{ env.CONTAINER_NAME }} --tail 50
+          exit 1
+        fi
+        
+    - name: Cleanup old resources
+      run: |
+        echo "Cleaning up old resources..."
+        # Build artifacts'ları sil
+        rm -f *.tar *.tar.gz *.zip || true
+        
+        # Dangling image'ları sil
+        if podman images -f "dangling=true" -q | grep -q .; then
+          podman rmi $(podman images -f "dangling=true" -q) || true
+        fi
+        
+        # 7 günden eski image'ları sil (SHA tag'li olanlar hariç latest)
+        podman images --format "{{.Repository}}:{{.Tag}} {{.CreatedAt}}" | \
+        grep "${{ env.IMAGE_NAME }}" | \
+        grep -v "latest" | \
+        awk '{print $1}' | \
+        head -n -5 | \
+        xargs -r podman rmi || true
+        
+        echo "Cleanup completed"
+        
+    - name: Deployment summary
+      run: |
+        echo "🚀 Deployment Summary:"
+        echo "- Image: ${{ env.IMAGE_TAG }}"
+        echo "- Container: ${{ env.CONTAINER_NAME }}"
+        echo "- Port: ${{ env.PORT }}"
+        echo "- Commit: ${{ github.sha }}"
+        echo "- Branch: ${{ github.ref_name }}"
+        echo "- Deployed at: $(date)"
