--- a/package.json
+++ b/package.json
@@ -65,5 +65,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "description": "PriceSync Pro, e-ticaret platformlarında ürün fiyat takibi ve yönetimi için geliştirilmiş modern bir web uygulamasıdır. **Next.js 15**, **React 18**, **TypeScript** ve **Tailwind CSS** teknolojileri kullanılarak geliştirilmiştir.",
+  "main": "postcss.config.js",
+  "author": "",
+  "license": "ISC"
 }
